Use proxima for fonts, and use advanced open file as the default.

--- a/styles.less
+++ b/styles.less
@@ -17,7 +17,7 @@
 
 // style the background color of the tree view
 .tree-view {
-  // background-color: whitesmoke;
+  font-family: 'Proxima Nova', 'Roboto', 'Helvetica Neue';
 }
 
 // style the background and foreground colors on the atom-text-editor-element itself
