Use the dark mode and font size.

--- a/styles.less
+++ b/styles.less
@@ -15,6 +15,10 @@
  * (To see them, uncomment and save)
  */
 
+.editor {
+  -webkit-font-smoothing: antialiased;
+}
+
 // style the background color of the tree view
 .tree-view {
   font-family: 'Proxima Nova', 'Roboto', 'Helvetica Neue';
