Use operator and add more shortcusts.

--- a/styles.less
+++ b/styles.less
@@ -17,6 +17,7 @@
 
 .editor {
   -webkit-font-smoothing: antialiased;
+  // font-style: italic;
 }
 
 // style the background color of the tree view
