--- a/styles.less
+++ b/styles.less
@@ -22,7 +22,7 @@
 
 // style the background color of the tree view
 .tree-view {
-  font-family: 'Proxima Nova', 'Roboto', 'Helvetica Neue';
+  font-family: -apple-system, BlinkMacSystemFont, 'Helvetica Neue';
 }
 
 // style the background and foreground colors on the atom-text-editor-element itself
